--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "slugify": "^1.4.5"
     },
     "devDependencies": {
+        "@conduitvc/appsync-emulator-serverless": "^0.14.5",
         "serverless-appsync-offline": "^1.4.0",
         "serverless-appsync-plugin": "^1.3.1",
         "serverless-offline": "^6.5.0"
